<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (c) 2002-2016, the original author or authors.

    This software is distributable under the BSD license. See the terms of the
    BSD license in the documentation provided with this software.

    http://www.opensource.org/licenses/bsd-license.php

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.sonatype.oss</groupId>
        <artifactId>oss-parent</artifactId>
        <version>9</version>
    </parent>

    <groupId>org.jline</groupId>
    <artifactId>jline-parent</artifactId>
    <name>JLine Parent</name>
    <description>JLine</description>
    <version>3.2.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <licenses>
        <license>
            <name>The BSD License</name>
            <url>http://www.opensource.org/licenses/bsd-license.php</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:git://github.com/jline/jline3.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/jline/jline3.git</developerConnection>
        <url>http://github.com/jline/jline3</url>
    </scm>

    <issueManagement>
        <system>github</system>
        <url>https://github.com/jline/jline3/issues</url>
    </issueManagement>

    <mailingLists>
        <mailingList>
            <name>jline-users</name>
            <post>mailto:jline-users@googlegroups.com</post>
            <unsubscribe>mailto:jline-users+unsubscribe@googlegroups.com</unsubscribe>
            <subscribe>https://groups.google.com/group/jline-users</subscribe>
            <archive>https://groups.google.com/group/jline-users</archive>
        </mailingList>
    </mailingLists>

    <developers>
        <developer>
            <id>gnodet</id>
            <name>Guillaume Nodet</name>
            <email>gnodet@gmail.com</email>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>
    </developers>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>

        <jna.version>4.2.2</jna.version>
        <jansi.version>1.14</jansi.version>
        <juniversalchardet.version>1.0.3</juniversalchardet.version>
        <easymock.version>3.3.1</easymock.version>
        <junit.version>4.12</junit.version>

        <osgi.event.version>1.3.1</osgi.event.version>
        <osgi.core.version>6.0.0</osgi.core.version>
        <osgi.annotation.version>6.0.0</osgi.annotation.version>
        <gogo.runtime.version>1.0.2</gogo.runtime.version>
        <gogo.jline.version>1.0.2</gogo.jline.version>

        <surefire.argLine/>
    </properties>

    <prerequisites>
        <maven>2.2.1</maven>
    </prerequisites>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.jline</groupId>
                <artifactId>jline-terminal</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.jline</groupId>
                <artifactId>jline-terminal-jansi</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.jline</groupId>
                <artifactId>jline-terminal-jna</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.jline</groupId>
                <artifactId>jline-reader</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.jline</groupId>
                <artifactId>jline-builtins</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.jline</groupId>
                <artifactId>jline</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.jline.deps</groupId>
                <artifactId>jna-${jna.version}</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.jline.deps</groupId>
                <artifactId>jansi-${jansi.version}</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.jline.deps</groupId>
                <artifactId>juniversalchardet-${juniversalchardet.version}</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.jline.deps</groupId>
                <artifactId>osgi-annotation-${osgi.annotation.version}</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.jline.deps</groupId>
                <artifactId>osgi-core-${osgi.core.version}</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.jline.deps</groupId>
                <artifactId>osgi-event-${osgi.event.version}</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.jline.deps</groupId>
                <artifactId>gogo-runtime-${gogo.runtime.version}</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.jline.deps</groupId>
                <artifactId>gogo-jline-${gogo.jline.version}</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.easymock</groupId>
                <artifactId>easymock</artifactId>
                <version>${easymock.version}</version>
            </dependency>

            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <defaultGoal>install</defaultGoal>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>2.10</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>build-helper-maven-plugin</artifactId>
                    <version>1.12</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>1.4.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.6.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.felix</groupId>
                    <artifactId>maven-bundle-plugin</artifactId>
                    <version>3.2.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.0.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.19.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.0.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>2.10.4</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <executions>
                    <execution>
                        <id>enforce-versions</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>3.3</version>
                                </requireMavenVersion>
                                <requireJavaVersion>
                                    <version>9</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <executions>
                    <execution>
                        <id>default-compile</id>
                        <configuration>
                            <!-- compile everything to ensure module-info contains right entries -->
                            <release>9</release>
                            <source>9</source>
                            <target>9</target>
                        </configuration>
                    </execution>
                    <execution>
                        <id>base-compile</id>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
                            <excludes>
                                <exclude>module-info.java</exclude>
                            </excludes>
                            <release>8</release>
                            <source>8</source>
                            <target>8</target>
                        </configuration>
                    </execution>
                </executions>
                <configuration>
                    <!-- Only required when JAVA_HOME isn't at least Java 9 and when haven't configured the maven-toolchains-plugin -->
                    <showWarnings>true</showWarnings>
                    <compilerArgs>
                        <arg>-Xlint:all,-options</arg>
                        <arg>-Werror</arg>
                        <arg>-profile</arg>
                        <arg>compact1</arg>
                    </compilerArgs>
                    <fork>true</fork>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <configuration>
                    <instructions>
                        <Export-Package>*;-noimport:=true</Export-Package>
                        <_failok>true</_failok>
                    </instructions>
                </configuration>
                <executions>
                    <execution>
                        <phase>process-classes</phase>
                        <goals>
                            <goal>manifest</goal>
                        </goals>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>biz.aQute.bnd</groupId>
                        <artifactId>biz.aQute.bndlib</artifactId>
                        <version>3.3.0</version>
                    </dependency>
                </dependencies>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
                    <argLine>--add-opens java.base/java.io=ALL-UNNAMED</argLine>
                    <failIfNoTests>false</failIfNoTests>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <additionalparam>-Xdoclint:none</additionalparam>
                    <failOnError>false</failOnError>
                </configuration>
                <executions>
                    <execution>
                        <id>javadoc</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

    <modules>
        <module>deps</module>
        <module>terminal</module>
        <module>terminal-jna</module>
        <module>terminal-jansi</module>
        <module>reader</module>
        <module>builtins</module>
        <module>jline</module>
    </modules>

</project>
